[FIX] sale: fix quantity non visible in portal
This commit fix the fw port https://github.com/odoo/odoo/pull/58149
which does not work in all scenario

Create a sale order
Put an optional product with long description (no line break)
Save and confirm
Log in the portal with the receiving user, add the optional product to
the order.

The customer can't see the quantity of the optional product.
The number is not showing in the quantity adjustment widet.

opw-2350879

--- a/addons/sale/static/src/scss/sale_portal.scss
+++ b/addons/sale/static/src/scss/sale_portal.scss
@@ -17,13 +17,20 @@
     overflow-wrap: break-word;
 }
 
+.sale_tbody input.js_quantity {
+    min-width: 48px;
+    text-align: center;
+}
+
+.sale_tbody .w-50 {
+    width: 100% !important;
+}
+
 .o_portal .sale_tbody .js_quantity_container {
-    width: 50%;
 
     .js_quantity {
         text-align: center;
         padding: 0;
-        min-width: 48px;
     }
 
     .input-group-text {
